# digital_letter_verification_code_recognition

./: BPNN.cpp  CMakeLists.txt  README.md  main.cpp
